Lets start running integration tests
