# prototipo/routes/vfs/file-list.js
@@ -45,6 +45,32 @@ function getRootFolder(userId, cb){
 module.exports = function(app){
   app.use('/', router);
 
+    router.post("/buscar", isAuthenticated, function(req, res, next) {
+        var result = {
+            result: []
+        };
+        req.checkBody('filename', 'Invalid filename').notEmpty();
+        var errors = req.validationErrors();
+        if (errors) {
+            var asStr = errors.map(function(e){
+              return e.msg;
+            }).join(",");
+            res.send(errors);
+            return;
+        }
+        var filename = req.body.filename;
+        File.find({
+                    originalname: filename,
+                    owner: req.user._id
+                }, function(err, files) {
+                    if (err) return res.send(result);
+                    files.forEach(function(f) {
+                        result.result.push(front(f));
+                    });
+                    res.send(result);
+        });
+   });
+
   router.post("/listar", isAuthenticated, function(req, res, next) {
       getRootFolder(req.user._id, function(err, idRaiz){
         var cwd = false,
